[gd_scene load_steps=5 format=3 uid="uid://cwb1ilqg2li0s"]

[ext_resource type="Script" path="res://scripts/item/chest.gd" id="1_78w1i"]
[ext_resource type="Texture2D" uid="uid://diytmm47u7uob" path="res://assets/item/closed_chest.png" id="2_3tybd"]
[ext_resource type="PackedScene" uid="uid://cuirhdskh4i0" path="res://scenes/sounds/PickUpSound.tscn" id="3_sy080"]

[sub_resource type="CircleShape2D" id="CircleShape2D_se6xg"]
radius = 17.0

[node name="Chest" type="Area2D"]
script = ExtResource("1_78w1i")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.037, 0.037)
texture = ExtResource("2_3tybd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_se6xg")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="PickUpSound" parent="." instance=ExtResource("3_sy080")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
